[workspace]
members = [
    "core",
    "datatypes",
    "examples/websites",
    "examples/websites-prometheus",
    "examples/port_count",
    # Exclude from compilation; many subscriptions takes a long time to compile
    # "examples/filter_stats",
    "examples/protocols",
    "examples/basic",
    "examples/basic_file",
    "examples/log_ssh",
    "examples/streaming",
    "examples/work-dispatching-v1",
    "examples/work-dispatching-v2",
    "examples/work-dispatching-v3", 
    "examples/work-dispatching-v4" 
]
resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized' }

