[workspace]
members = [
    "core",
    "datatypes",
    "examples/websites",
    "examples/websites-prometheus",
    "examples/port_count",
    # Exclude from compilation; many subscriptions takes a long time to compile
    # "examples/filter_stats",
    "examples/protocols",
    "examples/basic",
    "examples/basic_file",
    "examples/basic_dispatching",
    "examples/log_ssh",
    "examples/streaming",
]
resolver = "2"

[profile.release]
lto = false
debug = true
strip = false

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized' }

