[package]
name = "retina-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1" 
cc = "1.0.66"

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
bimap = "0.6.2"
byteorder = "1.4.2"
chrono = "0.4"
colored = "2"
cpu-time = "1.0.0"
crossbeam-channel = "0.5.1"
csv = "1.1.6"
ctrlc = { version = "3.1.7", features = ["termination"] }
dns-parser = { git = "https://github.com/thegwan/dns-parser.git" }
hashlink = "0.7.0"
hdrhistogram = "7.3.0"
hex = { version = "0.4.3", features = ["serde"] }
httparse = "1.3"
indexmap = "1.6.2"
ipnet = "2.3.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
maplit = "1.0.2"
md5 = "0.7.0"
nom = "6.0"
pcap = "0.8.1"
pest = "2.1.3"
pest_derive = "2.0"
petgraph = "0.5.1"
pnet = "0.27.2"
prettytable-rs = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tls-parser = { git = "https://github.com/thegwan/tls-parser.git" }
toml = "0.5.8"
x509-parser = "0.13.0"

[features]
timing = []
mlx5 = []
default = ["mlx5"]
