[package]
name = "retina-core"
version = "1.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0.79"

[dependencies]
anyhow = "1.0.70"
base64 = "0.13.1"
bimap = "0.6.3"
byteorder = "1.4.3"
chrono = "0.4"
colored = "2"
cpu-time = "1.0.0"
csv = "1.2.1"
ctrlc = { version = "3.2.5", features = ["termination"] }
dns-parser = { git = "https://github.com/stanford-esrg/dns-parser" }
hashlink = "0.7.0"
hdrhistogram = "7.5.2"
hex = { version = "0.4.3", features = ["serde"] }
httparse = "1.8"
indexmap = "1.9.3"
ipnet = "2.7.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.3"
pcap = "0.8.1"
pest = "2.5.7"
pest_derive = "2.5"
petgraph = "0.5.1"
pnet = "0.33.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tls-parser = { git = "https://github.com/stanford-esrg/tls-parser" }
toml = "0.5.11"
x509-parser = "0.13.2"
bitmask-enum = "2.2.4"
quote = "1.0.26"
proc-macro2 = "1.0.56"
ssh-parser = "0.5.0"
syn = { version = "2.0.15" }
regex = "1.7.3"
ring = "0.17.8"
aes-gcm = "0.10.3"

# Statistics
tokio = { version = "1.42.0", features = ["full"] }
array-init = "2.0"
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
prometheus-client = { version = "0.22.3", optional = true }
http-body-util = { version = "0.1.2", optional = true }

[features]
timing = []
prometheus = [
    "dep:hyper", 
    "dep:hyper-util",
    "dep:prometheus-client",
    "dep:http-body-util",
]
mlx5 = []
default = []
