[package]
name = "retina-filtergen"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5.4"
retina-core = { path = "../core", default-features = false }
syn = { version = "1.0", features = ["full", "extra-traits"] }
