[package]
name = "retina-filtergen"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.7.3"
retina-core = { path = "../core", default-features = false }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
