[package]
name = "ip_subs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.8.4"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4.0"
regex = "1.7.3"
