[package]
name = "pcap_dump"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.8.4"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
pcap-file = "1.1.1"
regex = "1.7.3"
retina-core = { path = "../../core", features = ["mlx5"] }
retina-filtergen = { path = "../../filtergen" }
