[package]
name = "test_ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
serde = { version = "1.0", features = ["derive"] }