[package]
name = "video"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.23", features = ["derive"] }
csv = "1.2.1"
env_logger = "0.8.4"
hashlink = "0.7.0"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.7.3"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
