[package]
name = "basic_test"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
retina-core = { path = "../../../core" }
retina-datatypes = { path = "../../../datatypes" }
retina-filtergen = { path = "../../../filtergen" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
